welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:36: error: not found: value comp
    comp = comp + 1
    ^